<resources>
    <string name="app_name">Hinca el Diente</string>
    <string name="bienvenido">Bienvenido al gestor de dietas \"Hinca el Diente\"</string>
    <string name="lblModifica">Modifica</string>
    <string name="lblElimina">Elimina</string>
    <string name="lblOcultaDesoculta">Ocultar/Desocultar</string>
    <string name="lblUsername">Nombre usuario</string>
    <string name="lblPassword">Contraseña…</string>
    <string name="msgNoPos">Posición incorrecta</string>
    <string name="pistaNombre">Nombre usuario…</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="botonLogin">Login</string>
    <string name="checkBoxAdmin">¿Usuario admin?</string>
    <string name="crearUsuario">Crear usuario</string>
    <string name="registrarseHeader">Introduce nombre y usuario para registrarte</string>
    <string name="modifUsuarioHeader">Modificar usuario</string>
    <string name="BalanceEnergeticoHeader">Calcular balance energetico</string>
    <string name="HistoricoHeader">Consultar historial de tu dieta</string>
    <string name="menuAdmin">Menú administrador</string>
    <string name="gestionarUsuariosHeader">Gestionar usuarios</string>
    <string name="gestionarAlimentosHeader">Gestionar alimentos</string>
    <string name="label_perfil">Perfil</string>
    <string name="label_altura">Altura (cm)</string>
    <string name="label_peso">Peso (Kg)</string>
    <string name="label_sexo">Sexo</string>
    <string name="label_edad">Edad</string>
    <string name="label_objetivo">Objetivo</string>
    <string name="label_metabolismo">Metabolismo Basal</string>
    <string name="label_ejercicio">Ejercicio(calorías quemadas):</string>
    <string name="label_balance">Balance energético total:</string>
    <string name="label_calculoBalance">Calcular Balance</string>
    <string name="label_modificar">Modificar perfil</string>
    <string name="label_anadir">Añadir alimento</string>
    <string name="label_pistaNombreAlimento">Nombre alimento...</string>
    <string name="label_pistaCantidadAlimento">Cantidad (en gramos)...</string>
    <string name="label_pistaCaloriasAlimento">Calorias alimento...</string>
    <string name="label_hint">Pulse para seleccionar…</string>
    <string name="opListaAlimentos">Alimentos</string>
    <string name="opListaUsuarios">Usuarios</string>
    <string name="opVisibles">Mostrar visibles</string>
    <string name="opOcultos">Mostrar ocultos</string>
    <string name="opAdmins">Mostrar administradores</string>
    <string name="opUsuarioNormal">Mostrar usuarios normales</string>
    <string name="lblusuario">Usuario</string>
    <string name="lblAdmin">Admin.</string>
    <string name="lblfecha">Fecha</string>
    <string name="lblbalance">Balance(kcal)</string>
    <string name="lblalimentos">Alimentos</string>
    <string name="lblnom">Nombre</string>
    <string name="lblcantidad">Cantidad(g)</string>
    <string name="lblcalorias">Calorias(kcal)</string>
    <string name="lblvisibilidad">Visibilidad</string>
</resources>
