<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/bienvenido"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edUsernameLogin"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/pistaNombre"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edPasswordLogin"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lblPassword"
        android:imeActionLabel="Sign in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/botonLogin" />

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:enabled="false"
        android:text="@string/botonRegistrarse" />

</LinearLayout>