<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_perfil_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPerfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_perfil" />

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewAltura"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_altura" />

        <EditText
            android:id="@+id/editTextAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:minWidth="48dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewPeso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_peso" />

        <EditText
            android:id="@+id/editTextPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:minWidth="48dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewSexo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_sexo" />

        <TextView
            android:id="@+id/seleccionSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:hint="@string/label_hint"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewEdad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_edad" />

        <EditText
            android:id="@+id/editTextEdad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:inputType="number"
            android:minWidth="48dp"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewObjetivo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_objetivo" />

        <TextView
            android:id="@+id/textViewMostrarObjetivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:hint="@string/label_hint"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewMetabolismo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:text="@string/label_metabolismo" />

        <TextView
            android:id="@+id/textViewMostrarMetabolismo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/buttonModifPerfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/label_modificar" />

        <Button
            android:id="@+id/buttonBalanceEnergia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/BalanceEnergeticoHeader" />

        <Button
            android:id="@+id/buttonConsultarHistorico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/HistoricoHeader" />


    </LinearLayout>

</LinearLayout>