<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lista_historico"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lblfecha"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lblbalance"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/lblalimentos"
            android:textAlignment="center"/>

    </LinearLayout>

    <ListView android:id="@+id/lvListaHistorico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9" />


</LinearLayout>