<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lista_alimentos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewMostrarFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:gravity="right"
            android:textSize="20sp"/>

    </LinearLayout>

    <ListView android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/lblnom"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/lblcantidad"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.45"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/lblcalorias"
            android:textAlignment="center"/>

    </LinearLayout>

    <ListView android:id="@+id/lvLista2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <ImageButton android:id="@+id/btInserta"
            android:src="@android:drawable/ic_menu_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewEjercicio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/label_ejercicio" />

        <EditText
            android:id="@+id/editTextEjercicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:layout_weight=".10"
            android:inputType="number"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".60"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/label_balance" />

        <TextView
            android:id="@+id/textViewMostrarBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textColor="@color/black"
            android:layout_weight=".10"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button android:id="@+id/btCalculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_calculoBalance"/>

</LinearLayout>