<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/anadirAlimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/label_anadir"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/label_pistaNombreAlimento"
        android:inputType="text"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_pistaCantidadAlimento"
        android:inputType="number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edCalorias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/label_pistaCaloriasAlimento"
        android:inputType="number"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_weight=".1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btCancelarAlimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="NestedWeights,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btGuardarAlimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</LinearLayout>