<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lista_usuarios"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gestionarUsuariosHeader"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.45"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/lblusuario"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.45"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/lblAdmin"
        android:textAlignment="center"/>

</LinearLayout>

    <ListView android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:layout_gravity="bottom"
        android:gravity="center_vertical" >

        <ImageButton android:id="@+id/btInserta"
            android:src="@android:drawable/ic_menu_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <TextView android:id="@+id/lblNum"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="end" />
    </LinearLayout>

</LinearLayout>