<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form_usuario"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="ERROR"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="@string/pistaNombre"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/lblPassword"
        android:imeActionLabel="Sign in"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="true" />

    <CheckBox
        android:id="@+id/cbAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxAdmin"
        android:visibility="visible"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_weight=".1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageButton
            android:id="@+id/btCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            tools:ignore="NestedWeights,SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@android:drawable/ic_menu_save"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

</LinearLayout>